# tiny-gl

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: lib.rs  types.rs  utils.rs
src/gl/: ffi.rs  mod.rs
src/gl/ffi/: enums.rs
src/wgl/: ffi.rs  mod.rs
src/wgl/ffi/: enums.rs
