[package]
name = "tiny-gl"
description = """
A set of OpenGL bindings suitable for use in a demo. This crate does not use std.
"""
version = "0.1.0"
edition = "2021"
authors = ["Tim Peters <mail@darksecond.nl>"]
license = "MIT"
repository = "https://github.com/demoscene-rs/tiny-gl"

[package.metadata.docs.rs]
all-features = true

[dependencies]
bitflags = { version = "2.6.0", default-features = false }

[features]
default = ["alloc"]
alloc = []